--- a/lp/v15/index.html
+++ b/lp/v15/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Reduslim</title>
-    <link rel="icon" href="../../../favicon_reduslim.ico">
+    <link rel="icon" href="favicon_reduslim.ico">
     <link href='https://fonts.ksn.pw/css?family=Roboto:400,500,900,700,300,300italic&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
     <link href='https://fonts.ksn.pw/css?family=Roboto+Slab:400,100,300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.ksn.pw/css?family=Rubik:400,700,900,500&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
@@ -16,7 +16,7 @@
 </head>
 
 <body style="overflow: visible; margin-right: 0px;">
-    <script src="../counter.js"></script>
+    <script src="counter.js"></script>
     <div class="container">
         <div class="block1">
             <div class="top-block mob">
@@ -699,7 +699,7 @@
         </div>
         <div class="footer">
             <div class="wrapper">
-                <div class="req-line lt159">GOOD DELIVERY SIA, Katlakalna iela 9A, Riga, LV -1073</div><a class="lt160" href="../../../privacy.html" target="_blank">Privacy policy</a><a class="lt161" href="../../../report.html" target="_blank">Report</a>
+                <div class="req-line lt159">GOOD DELIVERY SIA, Katlakalna iela 9A, Riga, LV -1073</div><a class="lt160" href="privacy.html" target="_blank">Privacy policy</a><a class="lt161" href="report.html" target="_blank">Report</a>
             </div>
         </div>
     </div><strong></strong>
@@ -887,9 +887,9 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $("form").leadprofit({
-                hash: "e13d8c8c-4525-4f2a-9e66-29724c99269d"
+                hash: "1a5cb21e-a951-4fff-930c-edf57a4c831f"
             }).leadprofitSubmit({
-                confirmUrl: '../../confirm.html',
+                confirmUrl: 'confirm.html',
                 counterParams: {
                     country: "{country}",
                     version: document.location.pathname.replace(/\/+/g, '').replace('landings', '').replace('index.html', '').replace('index2.html', '').replace('confirm.html', '')
@@ -911,7 +911,7 @@
 
         })
     </script>
-    <script src="../price.js"></script>
+    <script src="price.js"></script>
 
 
 
